--- a/records.html
+++ b/records.html
@@ -112,7 +112,7 @@
       gap: 10px;
       margin-bottom: 12px;
     }
-    .tag {
+    .nav-brand {
       display: inline-block;
       padding: 6px 10px;
       background: #e0f2f1;
@@ -120,6 +120,7 @@
       border-radius: 999px;
       font-weight: 600;
       font-size: 0.9rem;
+      margin-bottom: 16px;
     }
     .btn {
       display: inline-flex;
@@ -328,6 +329,7 @@
 <body>
   <div class="app-layout">
     <aside class="side-nav">
+      <div class="nav-brand">CarbonWise</div>
       <nav class="nav-items">
         <a href="records.html" class="nav-item" data-nav="records">My Records</a>
         <a href="insights.html" class="nav-item" data-nav="insights">Insights</a>
@@ -341,10 +343,7 @@
     <div class="app-content">
       <header>
         <div class="shell">
-          <div class="top-row">
-            <div class="tag">CarbonWise</div>
-            <div></div>
-          </div>
+          <div class="top-row"></div>
           <h1>My Records</h1>
           <p class="subhead">Your saved Scope 2 electricity emissions.</p>
         </div>
