--- a/settings.html
+++ b/settings.html
@@ -35,7 +35,16 @@
     header { padding: 32px 20px 12px; color: #0f172a; }
     .shell { max-width: 900px; margin: 0 auto; padding: 0 20px 60px; }
     .top-row { display: flex; justify-content: space-between; align-items: center; gap: 10px; margin-bottom: 8px; }
-    .tag { display: inline-block; padding: 6px 10px; background: #e0f2f1; color: #0f766e; border-radius: 999px; font-weight: 600; font-size: 0.9rem; }
+    .nav-brand {
+      display: inline-block;
+      padding: 6px 10px;
+      background: #e0f2f1;
+      color: #0f766e;
+      border-radius: 999px;
+      font-weight: 600;
+      font-size: 0.9rem;
+      margin-bottom: 16px;
+    }
     h1 { margin: 0 0 10px; font-size: clamp(28px, 4vw, 36px); letter-spacing: -0.01em; }
     p.muted { color: var(--muted); margin: 0 0 12px; }
     .card { background: #fff; border: 1px solid var(--line); border-radius: 14px; padding: 18px; box-shadow: 0 12px 30px rgba(15,23,42,0.08); }
@@ -77,6 +86,7 @@
 <body>
   <div class="app-layout">
     <aside class="side-nav">
+      <div class="nav-brand">CarbonWise</div>
       <nav class="nav-items">
         <a href="records.html" class="nav-item" data-nav="records">My Records</a>
         <a href="insights.html" class="nav-item" data-nav="insights">Insights</a>
@@ -90,10 +100,7 @@
     <div class="app-content">
       <header>
         <div class="shell">
-          <div class="top-row">
-            <div class="tag">CarbonWise</div>
-            <div class="muted">Company profile</div>
-          </div>
+          <div class="top-row"></div>
           <h1>Settings</h1>
           <p class="muted">Update the company information used in records and exports.</p>
         </div>
