Remove empty header row

--- a/settings.html
+++ b/settings.html
@@ -34,7 +34,7 @@
     .app-content { flex: 1; min-width: 0; }
     header { padding: 32px 20px 12px; color: #0f172a; }
     .shell { max-width: 900px; margin: 0 auto; padding: 0 20px 60px; }
-    .top-row { display: flex; justify-content: space-between; align-items: center; gap: 10px; margin-bottom: 8px; }
+    .top-row { display: none; }
     .nav-brand {
       display: inline-block;
       padding: 6px 10px;
