--- a/records.html
+++ b/records.html
@@ -106,11 +106,7 @@
       margin: 0 0 18px;
     }
     .top-row {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      gap: 10px;
-      margin-bottom: 12px;
+      display: none;
     }
     .nav-brand {
       display: inline-block;
