--- a/records.html
+++ b/records.html
@@ -51,7 +51,7 @@
       height: 100%;
     }
     .nav-footer {
-      margin-top: auto;
+      margin-top: 12px;
       padding-top: 12px;
       border-top: 1px solid rgba(148, 163, 184, 0.2);
     }
@@ -117,6 +117,7 @@
       font-weight: 600;
       font-size: 0.9rem;
       margin-bottom: 16px;
+      text-decoration: none;
     }
     .btn {
       display: inline-flex;
@@ -325,7 +326,7 @@
 <body>
   <div class="app-layout">
     <aside class="side-nav">
-      <div class="nav-brand">CarbonWise</div>
+      <a class="nav-brand" href="index.html">CarbonWise</a>
       <nav class="nav-items">
         <a href="records.html" class="nav-item" data-nav="records">My Records</a>
         <a href="insights.html" class="nav-item" data-nav="insights">Insights</a>
